After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796193 - playbin3: Fix to have suitable stream-type when doing stream selection
playbin3: Fix to have suitable stream-type when doing stream selection
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.14.0
Other Linux
: Normal minor
: 1.14.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-05-17 05:01 UTC by HoonHee Lee
Modified: 2018-05-17 10:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
playbin3: Collect appropriate stream-type while stream selection is doing (998 bytes, patch)
2018-05-17 05:02 UTC, HoonHee Lee
committed Details | Review

Description HoonHee Lee 2018-05-17 05:01:11 UTC
Dear All.
I fixed to have suitable stream-type when stream selection is doing.
 
Thanks.
Comment 1 HoonHee Lee 2018-05-17 05:02:46 UTC
Created attachment 372140 [details] [review]
playbin3: Collect appropriate stream-type while stream selection is doing

Dear All.
 
Please check and review my patch.
 
Thanks.
Comment 2 Tim-Philipp Müller 2018-05-17 09:28:53 UTC
Comment on attachment 372140 [details] [review]
playbin3: Collect appropriate stream-type while stream selection is doing

Thanks!

commit 88196c36f1da3a955fdf74d967fa94d97cbb2164
Author: hoonhee.lee <hoonhee.lee@lge.com>
Date:   Thu May 17 13:54:35 2018 +0900

    playbin3: Collect appropriate stream-type when doing stream selection
    
    https://bugzilla.gnome.org/show_bug.cgi?id=796193