playbin3: Collect appropriate stream-type when doing stream selection

https://bugzilla.gnome.org/show_bug.cgi?id=796193