gst/playback/gstplaybin3.c
@@ -2360,7 +2360,7 @@ do_stream_selection (GstPlayBin3 * playbin, GstSourceGroup * group)
           playbin->audio_stream_combiner != NULL);
       nb_audio++;
     } else if (stream_type & GST_STREAM_TYPE_VIDEO) {
-      pb_stream_type = PLAYBIN_STREAM_AUDIO;
+      pb_stream_type = PLAYBIN_STREAM_VIDEO;
       select_this =
           (nb_video == playbin->current_video ||
           (playbin->current_video == -1 && nb_video == 0) ||
